# tempsy-gateway

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  go.mod  go.sum
.github/workflows/: codeql.yml  deploy.yaml
cmd/gateway/: main.go
internal/gateway/auth/: utils.go
pkg/gateway/middleware/: error.go
pkg/middleware/: auth.go  error.go  proxy.go
src/: lib.rs  main.rs
